
  
       <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.95"
           android:background="#daf0fa"
           android:shrinkColumns="*"
           android:stretchColumns="*" >

 <TableRow
               android:id="@+id/tableRow1"
               android:layout_width="match_parent"
               android:layout_height="30dp" >
          
               </TableRow>

           <TableRow
               android:id="@+id/tableRow2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="35dp" >

               <ImageButton
                   android:id="@+id/imgPotential"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#daf0fa"
                   android:contentDescription="@string/RecipeLabel"
                   android:src="@drawable/potential" />

               <ImageButton
                   android:id="@+id/imgDilution"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_weight="0.95"
                   android:background="#daf0fa"
                   android:contentDescription="@string/CalcLabel"
                   android:src="@drawable/dilute" />

           </TableRow>

           <TableRow
               android:id="@+id/IconX1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" >

               <TextView
                   android:id="@+id/txtRecipies"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_weight="0.91"
                   android:text="@string/txtPotentialAlc"
                   android:textAppearance="@style/RegularFont" />

               <TextView
                   android:id="@+id/txtCalculate"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_weight="0.91"
                   android:text="@string/txtDilution"
                   android:textAppearance="@style/RegularFont" />

           </TableRow>

           <TableRow
               android:id="@+id/tableRow3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" >
           </TableRow>

           <TableRow
               android:id="@+id/tableRow4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingTop="60dp" >

               <ImageButton
                   android:id="@+id/imgConversions"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#daf0fa"
                   android:src="@drawable/math" />

               <ImageButton
                   android:id="@+id/imgYield"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#daf0fa"
                   android:src="@drawable/yield" />

           </TableRow>

           <TableRow
               android:id="@+id/TableRow02"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" >

               <TextView
                   android:id="@+id/TextView01"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.91"
                   android:gravity="center_horizontal"
                   android:text="@string/txtConversions"
                   android:textAppearance="@style/RegularFont" />

               <TextView
                   android:id="@+id/TextView02"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_weight="0.91"
                   android:text="Alc Yield"
                   android:textAppearance="@style/RegularFont" />
           </TableRow>

       </TableLayout>

