
  
       <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.95"
           android:background="#daf0fa"
           android:shrinkColumns="*"
           android:stretchColumns="*" >

 <TableRow
               android:id="@+id/tableRow1"
               android:layout_width="match_parent"
               android:layout_height="30dp" >
          
               </TableRow>

           <TableRow
               android:id="@+id/tableRow2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingTop="35dp" >

               <ImageButton
                   android:id="@+id/Recipes"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#daf0fa"
                   android:contentDescription="@string/RecipeLabel"
                   android:src="@drawable/notepad_black" />

               <ImageButton
                   android:id="@+id/Calculator"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_weight="0.95"
                   android:background="#daf0fa"
                   android:contentDescription="@string/CalcLabel"
                   android:src="@drawable/calculator" />

           </TableRow>

           <TableRow
               android:id="@+id/IconX1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" >

               <TextView
                   android:id="@+id/txtRecipies"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_weight="0.91"
                   android:text="@string/recipe"
                   android:textAppearance="@style/RegularFont" />

               <TextView
                   android:id="@+id/txtCalculate"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_weight="0.91"
                   android:text="@string/Calculate"
                   android:textAppearance="@style/RegularFont" />

           </TableRow>

           <TableRow
               android:id="@+id/tableRow3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" >
           </TableRow>

           <TableRow
               android:id="@+id/tableRow4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:paddingTop="60dp" >

               <ImageButton
                   android:id="@+id/imgSettings"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#daf0fa"
                   android:src="@drawable/settingsios2" />

               <ImageButton
                   android:id="@+id/imgSurvey"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="#daf0fa"
                   android:src="@drawable/filecab" />

           </TableRow>

           <TableRow
               android:id="@+id/TableRow02"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" >

               <TextView
                   android:id="@+id/TextView01"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="0.91"
                   android:gravity="center_horizontal"
                   android:text="Settings"
                   android:textAppearance="@style/RegularFont" />

               <TextView
                   android:id="@+id/TextView02"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_weight="0.91"
                   android:text="Feedback"
                   android:textAppearance="@style/RegularFont" />
           </TableRow>

       </TableLayout>

