<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#daf0fa"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium" >

        <TextView
            android:id="@+id/txtIwant"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:paddingTop="30dp"
            android:text="@string/iwanttocov"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spliqorweigth"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:entries="@array/converttype" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <EditText
            android:id="@+id/etStart"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            
            android:layout_gravity="left"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spType"
            android:layout_width="80dp"
            android:layout_alignBottom="@+id/etStart"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/etStart" />

        <Spinner
            android:id="@+id/spEnd"
            android:layout_width="80dp"
            
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/etStart"
             />

        <TextView
            android:id="@+id/txtInto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etStart"
            android:layout_toLeftOf="@+id/spEnd"
            android:paddingRight="18dp"
            android:text="@string/Into"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large" >

        <TextView
            android:id="@+id/txtAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="bottom"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnCalculateCon"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:layout_marginLeft="163dp"
            android:text="@string/Calculate" />
    </RelativeLayout>

</LinearLayout>